--- a/Project_UI/App.xaml
+++ b/Project_UI/App.xaml
@@ -1,15 +1,18 @@
 ﻿<Application x:Class="Project_UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Project_UI"
+             xmlns:local="clr-namespace:Project_UI.Models"
+             xmlns:lockal="clr-namespace:Project_UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             
             <local:BooleanToYesNoConverter x:Key="BooleanToYesNoConverter"/>
             <local:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
+            <local:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter"/>
+            <local:EnumNoneToVisibilityConverter x:Key="EnumNoneToVisibilityConverter"/>
 
-            <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/Icons.xaml"/>
                 <ResourceDictionary Source="/Resources/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
