--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Project_UI">
+                    xmlns:local="clr-namespace:Project_UI.Models">
 
     <local:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
 
