--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -102,33 +102,62 @@
             Grid.Row="1"
             Background="BlanchedAlmond"
             Style="{StaticResource SearchBar}">
-            <StackPanel
-                Orientation="Horizontal"
-                HorizontalAlignment="Right">
-                <TextBox
-                    x:Name="SearchBox"
-                    Text="{Binding ModelSearchText, UpdateSourceTrigger=PropertyChanged}"
-                    TextChanged="ModelSearchTextBox_TextChanged"
-                    Height="25"
-                    Width="200"
-                    Margin="0,0,5,0"/>
-
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                
                 <Button
-                    x:Name="SearchButton"
-                    Command="{Binding ApplyFiltersCommand}"
+                    HorizontalAlignment="Left"
+                    Grid.Column="0"
                     ToolTip="Поиск"
-                    Margin="0,0,20,0"
-                    Style="{StaticResource SearchButton}">
+                    Margin="20,0,0,0"
+                    Padding="5,0,0,0"
+                    Width="40"
+                    Height="40">
                     <Button.Content>
                         <Path
-                            Data="{StaticResource MagnifyingGlass}"
-                            Width="20"
-                            Height="20"
+                            Data="{StaticResource Admin}"
+                            Width="30"
+                            Height="30"
                             Fill="Black"
                             Stretch="Uniform"/>
-                    </Button.Content>
-                </Button>
-            </StackPanel>
+                        </Button.Content>
+                    </Button>
+                
+                <StackPanel
+                    Grid.Column="1"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right">
+                    
+
+                    <TextBox
+                        x:Name="SearchBox"
+                        Text="{Binding ModelSearchText, UpdateSourceTrigger=PropertyChanged}"
+                        TextChanged="ModelSearchTextBox_TextChanged"
+                        Height="25"
+                        Width="200"
+                        Margin="0,0,5,0"/>
+
+                    <Button
+                        x:Name="SearchButton"
+                        Command="{Binding ApplyFiltersCommand}"
+                        ToolTip="Поиск"
+                        Margin="0,0,20,0"
+                        Style="{StaticResource SearchButton}">
+                        <Button.Content>
+                            <Path
+                                Data="{StaticResource MagnifyingGlass}"
+                                Width="20"
+                                Height="20"
+                                Fill="Black"
+                                Stretch="Uniform"/>
+                        </Button.Content>
+                    </Button>
+                </StackPanel>
+            </Grid>
+            
         </Border>
 
         <Border
@@ -153,14 +182,35 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock
+                        <StackPanel
                             Grid.Row="0"
-                            Text="Фильтры для поиска:"
-                            FontSize="18"
-                            FontWeight="Bold"
-                            Foreground="Black"
                             Background="LightGray"
-                            Padding="6,3"/>
+                            Orientation="Horizontal">
+
+                            <TextBlock
+                                HorizontalAlignment="Left"
+                                Text="Фильтры для поиска:"
+                                FontSize="18"
+                                FontWeight="Bold"
+                                Foreground="Black"
+                                Padding="6,3"/>
+
+                            <Border
+                                Margin="35,3,0,0"
+                                BorderThickness="1"
+                                Width="40"
+                                Height="20">
+                                <Button
+                                    x:Name="ResetButton"
+                                    Command="{Binding ResetFiltersCommand}"
+                                    ToolTip="Поиск"
+                                    Content="Сброс"
+                                    FontSize="10"/>
+                            </Border>                            
+                        </StackPanel>
+                            
+                        
+                        
 
                         <ListBox
                             Grid.Row="1"
@@ -322,6 +372,7 @@
 
                             <StackPanel
                                 Name="FilterPrintingType"
+                                Background="#f5f5f5"
                                 Style="{StaticResource FilterItem}">
 
                                 <Grid>
@@ -523,6 +574,7 @@
 
                             <StackPanel
                                 x:Name="FilterPositioning"
+                                Background="#f5f5f5"
                                 Style="{StaticResource FilterItem}">
 
                                 <Grid>
