--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -130,7 +130,12 @@
                     Grid.Column="1"
                     Orientation="Horizontal"
                     HorizontalAlignment="Right">
-                    
+
+                    <TextBlock
+                        Text="Поиск по названию:"
+                        FontSize="18"
+                        FontWeight="Bold"
+                        Margin="0,9,5,0"/>
 
                     <TextBox
                         x:Name="SearchBox"
@@ -138,6 +143,7 @@
                         TextChanged="ModelSearchTextBox_TextChanged"
                         Height="25"
                         Width="200"
+                        Padding="0,5,0,0"
                         Margin="0,0,5,0"/>
 
                     <Button
