--- a/Project_UI/AdminWindow.xaml
+++ b/Project_UI/AdminWindow.xaml
@@ -193,6 +193,148 @@
                         Foreground="Black"
                         Background="LightGray"
                         Padding="0,3"/>
+
+                    <Grid Grid.Row="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto">
+                            <Grid x:Name="InputGrid" Margin="0,0,0,10">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="10"/>
+
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <TextBlock Grid.Row="0" Grid.Column="0" Text="Модель:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding SelectedPlotter.Model, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="1" Grid.Column="0" Text="Производитель:" VerticalAlignment="Center" Margin="5"/>
+                                <ComboBox Grid.Row="1" Grid.Column="1" ItemsSource="{Binding AllManufacturers}"
+                                          SelectedItem="{Binding SelectedPlotter.Manufacturer, Mode=TwoWay}"
+                                          IsEditable="True" Margin="5"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0" Text="Габариты:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding SelectedPlotter.Dimensions, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="3" Grid.Column="0" Text="Доп. информация:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding SelectedPlotter.Addendum, UpdateSourceTrigger=PropertyChanged}" Margin="5" AcceptsReturn="True" TextWrapping="Wrap" Height="60"/>
+
+                                <TextBlock Grid.Row="4" Grid.Column="0" Text="Путь к изображению:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding SelectedPlotter.PathToImage, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="5" Grid.Column="0" Text="Цена:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SelectedPlotter.Price, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="6" Grid.Column="0" Text="Ширина печати:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding SelectedPlotter.Width, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="7" Grid.Column="0" Text="Вес:" VerticalAlignment="Center" Margin="5"/>
+                                <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding SelectedPlotter.Weight, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                                <TextBlock Grid.Row="8" Grid.Column="0" Text="Наличие ЖД:" VerticalAlignment="Center" Margin="5"/>
+                                <CheckBox Grid.Row="8" Grid.Column="1" IsChecked="{Binding SelectedPlotter.HasHardDrive}" VerticalAlignment="Center" Margin="5"/>
+
+                                <Rectangle Grid.Row="9" Grid.ColumnSpan="3" Fill="LightGray" Height="1" Margin="0,5,0,5"/>
+
+                                <TextBlock Grid.Row="10" Grid.Column="0" Text="Тип плоттера:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="10" Grid.Column="1" ItemsSource="{Binding PlotterTypeOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <TextBlock Grid.Row="11" Grid.Column="0" Text="Способ нанесения:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="11" Grid.Column="1" ItemsSource="{Binding DrawingMethodOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <TextBlock Grid.Row="12" Grid.Column="0" Text="Тип подачи материала:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="12" Grid.Column="1" ItemsSource="{Binding PositioningOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <RadioButton Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" GroupName="PositioningGroup" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <TextBlock Grid.Row="13" Grid.Column="0" Text="Тип печати:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="13" Grid.Column="1" ItemsSource="{Binding PrintingTypeOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <TextBlock Grid.Row="14" Grid.Column="0" Text="Формат печати:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="14" Grid.Column="1" ItemsSource="{Binding PaperFormatOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                                <TextBlock Grid.Row="15" Grid.Column="0" Text="Тип материала:" FontWeight="Bold" Margin="5,10,5,5"/>
+                                <ItemsControl Grid.Row="15" Grid.Column="1" ItemsSource="{Binding MaterialOptions}" Margin="5,0,5,5">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected, Mode=TwoWay}" Margin="2"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+
+                            </Grid>
+                        </ScrollViewer>
+
+                        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                            <Button Content="Сохранить" Width="100" Height="30" Command="{Binding SavePlotterCommand}" Margin="5"/>
+                            <Button Content="Отмена" Width="100" Height="30" Command="{Binding CancelEditCommand}" Margin="5"/>
+                            <Button Content="Удалить" Width="100" Height="30" Command="{Binding DeletePlotterCommand}" Margin="5"/>
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
+                        <Button Content="Создать новый плоттер" Command="{Binding CreateNewPlotterCommand}" Margin="20,0,0,0" Width="180" Height="30"/>
+                    </StackPanel>
+
+                    <ListBox Grid.Row="1" ItemsSource="{Binding AllPlotters}"
+                             SelectedItem="{Binding SelectedPlotter}"
+                             DisplayMemberPath="Model" Margin="5" />
                 </Grid>
             </Grid>
         </Border>
